@@ -1,0 +1,6 @@
+@0 A(1)
+@1 A(1)
+@2 A(1)
+@3 B(1)(2)
+@4 C(1)(2)
+@100
